# em-shell

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt  atomic.h  em-shell.c  em-shell.h  emshell-config.cmake.in  shell.c  shell.h
example/: CMakeLists.txt  Makefile  example.c
src/: CMakeLists.txt  atomic.h  em-shell.c  em-shell.h
test/: CMakeLists.txt  Makefile  test.c
